# afl-fuzz

./: .gitignore  Cargo.toml  README.md  clippy.sh
src/: afl_stats.rs  corpus.rs  executor.rs  feedback.rs  fuzzer.rs  hooks.rs  main.rs  utils.rs
test/: README  program.c
test/libxml2/: xmllint.c
