[package]
name = "afl-fuzz"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive", "env"] }
#libafl = { git = "https://github.com/AFLplusplus/LibAFL.git", features = ["std", "derive"]}
#libafl_bolts = { git = "https://github.com/AFLplusplus/LibAFL.git"}
libafl = { path = "../LibAFL/libafl", feautres = ["std", "derive"]}
libafl_bolts = { path = "../LibAFL/libafl_bolts"}
nix = "0.27"
