[package]
name = "afl-fuzz"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive", "env"] }
#libafl = { git = "https://github.com/AFLplusplus/LibAFL.git", features = ["std", "derive"]}
#libafl_bolts = { git = "https://github.com/AFLplusplus/LibAFL.git"}
libafl = { path = "../LibAFL/libafl", feautres = ["std", "derive", "afl_stability", "track_hit_feedbacks", "afl_execs_sec"]}
libafl_bolts = { path = "../LibAFL/libafl_bolts"}
libafl_targets = { path = "../LibAFL/libafl_targets"}
nix = "0.29"
regex = "1.10.4"
serde_json = "1.0.117"

[features]
default = ["track_hit_feedbacks"]
track_hit_feedbacks = ["libafl/track_hit_feedbacks"]
